--- a/dev/public/app.css
+++ b/dev/public/app.css
@@ -1,10 +1,10 @@
-input {
+/* input {
   width: 100%;
   line-height: 1.5;
 	font-size: 50px;
 	color: black;
 	padding: 5px 10px 0px 0px;
-}
+} */
 
 .button {
   line-height: 2.0;
@@ -18,24 +18,22 @@ input {
   background-color: aqua;
 }
 
-.flex-container {
+.container {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
+  justify-content: flex-start;
+  align-items: flex-start;
   align-content: center;
 }
 
-form {
+.form {
 	line-height: 1.5;
 	border: none;
 	border-bottom: 3px solid #ebebeb;
-	margin-top: 100px;
-	width: 700px;
-	font-size: 2.9em;
-	color: white;
-	padding: 5px 10px;
+	width: 100%;
+	font-size: 1.9em;
+	color: black;
 	background: transparent;
 }
 
@@ -46,4 +44,7 @@ form {
   justify-content: center;
   align-items: stretch;
   align-content: stretch;
+}
+.center {
+  text-align: center;
 }
