--- a/dev/views/joinus.ejs
+++ b/dev/views/joinus.ejs
@@ -1,23 +1,34 @@
 <head>
     <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
-  <link rel="stylesheet" href="/app.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400" rel="stylesheet">
+    <link rel="stylesheet" href="/app.css">
 </head>
 
 <body>
-  <div class="flex-container">
-  <div class="container">
-      <h1 class="">JOIN US</h1>
-      <p class="lead">Enter your product information and join our <strong><%= count %></strong> others on our waitlist. </p>
-      <form method="POST" action='/register'>
-          <input type="text" class="form" name="name" placeholder="Enter your product name" required>
-          <input type="text" class="form" name="department" placeholder="Enter your department name" required>
-          <input type="number" class="form" name="price" type=range min=0 max=10000 step=0.01 placeholder="0.00" required>
-          <input type="number" class="form" name="quantity" placeholder="Enter your stock quantity" required>
-          <br><button class="button">SUBMIT</button>
-      </form>
-  </div>
-</div>
+    <div class="container">
+        <h1 class="lead">Enter your product information and join our
+            <mark>
+                <u>
+                    <%= count %>
+                </u>
+            </mark> others on our waitlist. </h1>
+        <form action="/" method="GET">
+            <button class="button">Home-Page</button>
+        </form>
+        <form method="POST" action='/register' class="form">
+            <input type="text" class="form" name="name" placeholder="Enter your product name" required>
+            <input type="text" class="form" name="department" placeholder="Enter your department name" required>
+            <input type="number" class="form" name="price" type=range min=0 max=10000 step=0.01 placeholder="0.00" required>
+            <input type="number" class="form" name="quantity" placeholder="Enter your stock quantity" required>
+            <br>
+            <button class="button">SUBMIT</button>
+        </form>
+    </div>
 </body>
+<style>
+    body {
+        background-color: bisque;
+    }
+</style>
